service worker moved

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "svelte-routing": "^1.6.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "vite": "^2.3.8",
+    "workbox-build": "^6.1.5",
+    "workbox-core": "^6.1.5",
+    "workbox-routing": "^6.1.5",
+    "workbox-strategies": "^6.1.5"
   }
 }
